# ckalo

./: .gitignore  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac
include/: Makefile.am  common.h  detect.h  eat.h  hello.h  proxy.h
src/: Makefile.am  detect.c  eat.c  hello.c  libckalo.pc.in
